# simple-util-cpp

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  conanfile.py
src/system/: Constants.cpp  Constants.hpp  Error.hpp  LocalTime.hpp  Platform.hpp  Process.cpp  Process.hpp  StackTrace.cpp  StackTrace.hpp  Timer.cpp  Timer.hpp
src/system/thread/: ConditionVariable.cpp  ConditionVariable.hpp  Lock.cpp  Lock.hpp  Mutex.cpp  Mutex.hpp  Semaphore.cpp  Semaphore.hpp  Thread.cpp  Thread.hpp
src/util/: Array2d.hpp  Array3d.hpp  CircularBuffer.hpp  Option.hpp  Result.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp  Unit.cpp  Unit.hpp
src/util/exception/: Exception.cpp  Exception.hpp  IOException.cpp  IOException.hpp  IllegalArgumentException.cpp  IllegalArgumentException.hpp  IllegalStateException.cpp  IllegalStateException.hpp  InvalidOperationException.cpp  InvalidOperationException.hpp
src/util/functional/: Range.hpp
src/util/io/: Path.cpp  Path.hpp  ReadStream.cpp  ReadStream.hpp  ResizingBuffer.cpp  ResizingBuffer.hpp
src/util/logging/: ConsoleSink.cpp  ConsoleSink.hpp  DefaultLogFormatter.cpp  DefaultLogFormatter.hpp  LogFormatter.cpp  LogFormatter.hpp  LogLevel.cpp  LogLevel.hpp  LogLine.cpp  LogLine.hpp  LogSink.cpp  LogSink.hpp  Logging.cpp  Logging.hpp
src/util/math/: Constants.hpp  Point.cpp  Point.hpp  Quaternion.cpp  Quaternion.hpp  Random.cpp  Vec.cpp  (+4 more)
test/: CMakeLists.txt  conanfile.py
test/util/: Array2dTest.cpp  Array3dTest.cpp  CircularBufferTest.cpp  OptionTest.cpp  ResultTest.cpp  StringTest.cpp
test/util/functional/: RangeTest.cpp
(+12 files in other folders)
